@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -67,14 +67,6 @@ public class DictionaryStatsTest {
     // Variance of bucket size :     0.281
     // Std. dev. of bucket size:     0.530
     // Maximum bucket size     :         2
-    // ProtectionDomainCacheTable statistics:
-    // Number of buckets       :      1009 =      8072 bytes, each 8
-    // Number of entries       :         0 =         0 bytes, each 0
-    // Total footprint         :           =      8072 bytes
-    // Average bucket size     :     0.000
-    // Variance of bucket size :     0.000
-    // Std. dev. of bucket size:     0.000
-    // Maximum bucket size     :         0
 
 
     public void run(CommandExecutor executor) throws ClassNotFoundException {
@@ -99,10 +91,6 @@ public class DictionaryStatsTest {
         output.shouldContain("Std. dev. of bucket size");
         output.shouldContain("Maximum bucket size");
         output.shouldMatch("LoaderConstraintTable statistics:");
-        // Would be nice to run this with "-Djava.security.manager=allow"
-        // so the numbers aren't 0 (running make with VM_OPTIONS allowing
-        // security manager does get 12 entries in this table.)
-        output.shouldMatch("ProtectionDomainCacheTable statistics:");
 
         // what is this?
         Reference.reachabilityFence(named_cl);
